Create simple homepage template with banner.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6037,3 +6037,6 @@ a.text-dark:hover, a.text-dark:focus {
   .table-bordered th,
   .table-bordered td {
     border: 1px solid #ddd !important; } }
+
+#home .carousel .carousel-inner .carousel-item .item-bg {
+  height: 400px; }
