--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6038,5 +6038,11 @@ a.text-dark:hover, a.text-dark:focus {
   .table-bordered td {
     border: 1px solid #ddd !important; } }
 
+section {
+  padding: 60px 0; }
+
 #home .carousel .carousel-inner .carousel-item .item-bg {
   height: 400px; }
+
+footer {
+  margin-top: 90px; }
