Add helper/mixin SCSS files. Add the automatic target=_blank additions to external links

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,14 @@
-
+html,
+body {
+	@include font-smoothing(on);
+	overflow-x: hidden;
+}
 
 section {
   padding: 60px 0;
+  clear: both;
+}
+
+.cta {
+  text-align: center;
 }
