--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'custom-bootstrap';
+@import 'mixins';
+@import 'helpers';
 
 @import 'global';
 @import 'home';
