More bootstrap template integration.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6091,6 +6091,9 @@ section {
   padding: 60px 0;
   clear: both; }
 
+.container-fluid {
+  max-width: 1440px; }
+
 .cta {
   text-align: center; }
 
